[metadata]
name = bbswitch-gui
version = 0.1.0
author = Pavel Artsishevsky
author_email = polter.rnd@gmail.com
description = GUI tool for managing NVIDIA GPU power states and utilization
python_requires = >=3.8
license = GPLv3+
classifiers =
    Environment :: GPU
    Environment :: GPU :: NVIDIA CUDA

[options]
packages = find:
scripts = bbswitch-gui

[options.package_data]
* = ui/*.glade, ui/*.css, icons/*.svg

[options.data_files]
share/icons/hicolor/scalable/status = data/icons/*-symbolic.svg

[pylint.'MESSAGES CONTROL']
disable = missing-module-docstring,wrong-import-position,too-many-instance-attributes

[pylint.FORMAT]
max-line-length = 100

[flake8]
extend-ignore = D100,E402
max-line-length = 100

[pycodestyle]
max-line-length = 100
