[metadata]
name = bbswitch-gui
version = attr: bbswitch_gui.__version__
author = Pavel Artsishevsky
author_email = polter.rnd@gmail.com
description = GUI tool for managing NVIDIA GPU power states and utilization
python_requires = >=3.8
license = GPLv3+
classifiers =
    Environment :: GPU
    Environment :: GPU :: NVIDIA CUDA

[options]
packages = find:
scripts = bbswitch-gui

[options.package_data]
* = ui/*.glade, ui/*.css, icons/*.svg

[options.data_files]
share/icons/hicolor/scalable/status = data/icons/*-symbolic.svg

[pylint]
disable = no-member,wrong-import-position

[pylint.FORMAT]
max-line-length = 100

[flake8]
ignore = W503,E402
max-line-length = 100

[pycodestyle]
ignore = W503,E402
max-line-length = 100
